# request-authentication-configurator

./: CONTRIBUTING.md  README.md  charmcraft.yaml  concierge.yaml  config.yaml  metadata.yaml  pyproject.toml  tox.ini
.github/workflows/: ci.yaml  publish.yaml  release.yaml  tiobe_scan.yaml
src/: charm.py  request_authentication_integrator.py
src/components/: config_validation.py  oauth_integration.py  request_auth_integration.py
terraform/: README.md  main.tf  outputs.tf  variables.tf
tests/integration/: charms_dependencies.py  dependency_charms.py  test_charm.py
tests/unit/: test_charm.py
