# Copyright 2026 Ubuntu
# See LICENSE file for licensing details.

[project]
name = "request-authentication-integrator"
requires-python = ">=3.12,<4.0"

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"

# Linting tools configuration
[tool.ruff]
line-length = 99
lint.select = ["E", "W", "F", "C", "N", "D", "I001"]
lint.ignore = [
    "D105",
    "D107",
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
]
extend-exclude = ["__pycache__", "*.egg_info"]
lint.per-file-ignores = {"tests/*" = ["D100","D101","D102","D103","D104"]}

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.codespell]
skip = "build,lib,venv,icon.svg,.tox,.git,.mypy_cache,.ruff_cache,.coverage"

[tool.pyright]
include = ["src", "tests"]

# dependency management:

[tool.poetry]
package-mode = false

[tool.poetry.group.charm]
optional = true

[tool.poetry.group.charm.dependencies]
charmed-kubeflow-chisme = "^0.4.25"
ops = "^2.17.1"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
ruff = "^0.8.0"
codespell = "^2.3.0"
pyright = "^1.1.386"

[tool.poetry.group.unit]
optional = true

[tool.poetry.group.unit.dependencies]
coverage = { version = "^7.6.1", extras = ["toml"] }
ops = { version = "^2.17.1", extras = ["testing"] }
pytest = "^8.3.4"

[tool.poetry.group.integration]
optional = true

[tool.poetry.group.integration.dependencies]
jubilant = "*"
pytest = "^8.3.4"
PyYAML = "^6.0.2"
